# agent-env-core

./: .gitignore  LICENSE  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/agent_env_core/: __init__.py  exceptions.py  response.py  timing.py
src/agent_env_core/browser/: __init__.py  cloudflare_detect.py  flare_solverr.py  render.py  screenshot.py  stale_retry.py
src/agent_env_core/desktop/: __init__.py  backend.py  capture.py  factory.py  locate.py
src/agent_env_core/desktop/backends/: __init__.py  linux.py  macos.py  windows.py
src/agent_env_core/terminal/: __init__.py  command.py  env.py  format_filesystem_blocklist.py  prompts.py  safety.py  stream.py
tests/: conftest.py  test_exceptions.py  test_package_import.py  test_response_schema.py
tests/browser/: test_browser_render.py  test_browser_screenshot.py  test_cloudflare_detect.py  test_flare_solverr.py
tests/desktop/: test_backend_factory.py  test_desktop_capture.py  test_template_matching.py  test_wayland.py
tests/smoke/: test_smoke_tools.py
tests/terminal/: test_command_parse.py  test_env_sanitization.py  test_prompt_detection.py  test_streaming_timeout.py  test_terminal_safety.py
