[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "agent-env-core"
version = "0.1.0"
description = "Async browser, desktop, and terminal environment tools for agents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "agent_env_core maintainers" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed"
]
dependencies = []

[project.optional-dependencies]
browser = [
  "playwright==1.49.1",
  "Pillow==11.1.0"
]
desktop = [
  "mss==10.0.0",
  "opencv-python==4.10.0.84",
  "numpy==2.2.1",
  "Pillow==11.1.0",
  "PyAutoGUI==0.9.54",
  "pytesseract==0.3.13",
  "python-xlib==0.33; platform_system == 'Linux'"
]
terminal = []
flare-solverr = [
  "httpx==0.28.1",
]
all = [
  "agent-env-core[browser,desktop,terminal,flare-solverr]"
]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.2",
  "pytest-cov==6.0.0",
  "ruff==0.9.2",
  "mypy==1.14.1"
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_env_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "browser: tests requiring Playwright and installed browser binaries",
  "desktop: tests requiring a graphical desktop/display server",
  "terminal: tests for terminal command execution",
  "flare-solverr: tests requiring a running FlareSolverr container or mocked HTTP",
  "smoke: package-level smoke tests"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "ANN"]
ignore = ["ANN401"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["agent_env_core"]
